--- a/src/theme/style.css
+++ b/src/theme/style.css
@@ -25,7 +25,8 @@ address {
 #mainNav ul li.current-category-parent a,
 #mainNav ul li.current-category-ancestor a,
 #mainNav ul li.current-portfolio-ancestor a,
-#mainNav ul li.current-projects-ancestor a {
+#mainNav ul li.current-projects-ancestor a,
+#mainNav .active {
   color: #2e2e2e !important;
 }
 #mainNav ul li.sfHover a,
