--- a/src/theme/style.css
+++ b/src/theme/style.css
@@ -533,7 +533,10 @@ a.action {
 
 #mainNav ul li.sfHover ul a { color: #7b7b7b!important; }
 
-#mainNav ul li.sfHover ul a:hover { color: #fff!important; }
+#mainNav ul li.sfHover ul a:hover { 
+	color: #363636 !important;
+	/* color: #fff!important;  */
+}
 
 /** arrow **/
 
